update for published DataDescriptors

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <base href="http://browse.ikewai.org">
+    <base href="/" />
     <title>Agave Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
