update with sites/var and url param

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <base href="/" />
-    <title>Agave Login</title>
+    <title>`Ike Wai Public Data Repository</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- bootstrap css -->
@@ -11,8 +11,8 @@
     <style>
         a { cursor: pointer }
     </style>
-</head>
+<link rel="stylesheet" href="styles.00aab156e99164fa7156.css"></head>
 <body>
     <app>Loading...</app>
-<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.6744963f067d520d5f51.js"></script><script type="text/javascript" src="main.b7fdc345619e830174e5.js"></script></body>
 </html>
